--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,12 @@
 <h1>Slacker News <%= link_to "New", new_article_path(@article), :class => "btn btn-default" %></h1>
+<br>
+
 <ul>
   <% @articles.each do |article| %>
     <li class="list"> <%= link_to "#{article.title}", article.url %> posted by <strong><%= "#{article.author}" %></strong>
-      <%= link_to "Edit", article_path(article), :class => "btn btn-danger" %>
+      <%= link_to "Edit", edit_article_path(article), :class => "btn btn-danger" %>
     </li>
+    <%= link_to "Comment", article_comments_path(article), :class => "btn-group btn-group-xs" "btn btn-default" %>
   <% end %>
 </ul>
 
